--- a/pepper/static/scss/main.scss
+++ b/pepper/static/scss/main.scss
@@ -468,6 +468,9 @@ body {
   width: 100%;
   margin-top: 50px;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 70px;
+  img {
+	padding-bottom: 10px;
+  }
   //background-color: #f5f5f5;
 }
