--- a/pepper/templates/layouts/base.html
+++ b/pepper/templates/layouts/base.html
@@ -35,7 +35,7 @@
 			<a href="https://freetailhackers.com"><img class="img-responsive center-block"
 													   src="{{ url_for('static', filename='branding/badge.svg') }}"
 													   width=50></a>
-						<p class="center">HackTX proudly produces <a href="https://github.com/rohitdatta/pepper" class="decorate">Pepper</a> for you to use at your own hackathon!</p>
+						<p class="center">Want to use MyMLH at your own hackathon? HackTX proudly open sourced <a href="https://github.com/rohitdatta/pepper" class="decorate">Pepper</a> for you to use.</p>
 		</div>
 	</footer>
 {% endblock body %}
