--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -68,7 +68,7 @@
 			<div class="row">
 				<h3>Resume</h3>
 				<div class="col-md-6 form-info">
-					<p>Please upload your resume here. We'll be sharing this with our partners so you can get cool jobs, swag, and more!</p>
+					<p>Please upload your resume here. We'll be sharing this with our partners so you can get cool jobs, swag, and more! (PDFs only)</p>
 				</div>
 				<div class="col-md-6">
 					<input type=file name="resume">
