--- a/pepper/templates/users/dashboard/pending.html
+++ b/pepper/templates/users/dashboard/pending.html
@@ -4,8 +4,8 @@
 	<div class="text-center col-md-8 col-md-offset-2">
 		<h1>Thanks for applying to {{ config.HACKATHON_NAME }}, {{ user.fname }}!</h1>
 		<div class="large-text">
-		<p>We'll accept the majority of our attendees through first-come first-serve, but we've also reserved a block of our slots for a random lottery in case you weren't one of the first to apply.</p>
-		<p>We'll make sure to send you an email when we have more info for you, but while you're waiting we have a cute GIF for you to look at!</p>
+		<p>We will accept the majority of our applicants on a first-come, first-serve basis. In case you weren't one of the first ones to register, we also have reserved spots that will be given out by random lottery. May the odds ever be in your favor.</p>
+		<p>You should receive an email that confirms your registration. Email <a href="mailto:hello@hacktx.com" class="decorate">hello@hacktx.com</a> if you have any questions and here's a cute GIF just because.</p>
 			</div>
 		<img src="{{ url_for('static', filename='img/puppy.gif') }}" class="puppy">
 	</div>
