--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -4,14 +4,12 @@
     <section class="content">
       <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
       <div class="center"><h3>Austin, TX | October 22-23, 2016</h3></div>
-		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons">Sign in with MyMLH</button></a>
+		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="You might need to create a MyMLH Account">Sign in with MyMLH</span></button></a>
     </section>
 
 	<footer class="footer">
 		<div class="col-md-6 col-md-offset-3">
-			<a href="https://freetailhackers.com"><img class="img-responsive center-block"
-													   src="{{ url_for('static', filename='branding/badge.svg') }}"
-													   width=50></a>
+			<a href="https://freetailhackers.com"><img class="img-responsive center-block" src="{{ url_for('static', filename='branding/badge.svg') }}" width=50></a>
 		</div>
 	</footer>
 
