--- a/pepper/templates/layouts/head.html
+++ b/pepper/templates/layouts/head.html
@@ -30,5 +30,14 @@
 	window.popupMessages = {{ get_flashed_messages(with_categories=True) | json | safe }};
 </script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-74341110-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
