--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -5,6 +5,8 @@
       <img class="hacktx-logo img-responsive center-block" src="{{ url_for('static', filename='branding/logo.svg') }}"/>
       <div class="center"><h3>Austin, TX | October 22-23, 2016</h3></div>
 		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="You might need to create a MyMLH Account">Sign in with MyMLH</span></button></a>
+		<a href="{{ url_for('register') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Regular register">Sign up with email (Test)</span></button></a>
+		<a href="{{ url_for('login_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Sign in with email">Sign in with email (Test)</span></button></a>
     </section>
 
 	<footer class="footer">
@@ -12,14 +14,6 @@
 			<a href="https://freetailhackers.com"><img class="img-responsive center-block" src="{{ url_for('static', filename='branding/badge.svg') }}" width=50></a>
 		</div>
 	</footer>
-
-
-
-
-
-
-
-
 
 {##}
 {##}
