Feature: Added edit profile functionality with a bug where previous user birthdate is not reflected on the edit form

--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -58,7 +58,7 @@
 				</table>
 			</div>
 		</div>
-		<a href="https://my.mlh.io/edit">
+		<a href="{{ url_for('edit_profile') }}">
 			<button class="">Edit</button>
 		</a>
 		<hr>
