--- a/pepper/templates/users/login.html
+++ b/pepper/templates/users/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="center">
-        <h2>HackTX 2016 Sign-In</h2>
+        <h2>{{ config.HACKATHON_NAME }} Sign-In</h2>
         <form action="" method="post">
             <input type="text" placeholder="Email" name="email" required>
             <input type="password" placeholder="Password" name="password" required>
