--- a/pepper/templates/users/register_local.html
+++ b/pepper/templates/users/register_local.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="center">
-		<h2>HackTX 2016 Registration</h2>
+		<h2>{{ config.HACKATHON_NAME }} Registration</h2>
 		<form method="POST" action="">
 			<input type="text" placeholder="First Name" name="fname" required>
 			<input type="text" placeholder="Last Name" name="lname" required>
