--- a/pepper/templates/users/edit_profile.html
+++ b/pepper/templates/users/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-	<div class="center">
+	<div class="center col-md-4 col-md-offset-4">
 		<h2>{{ config.HACKATHON_NAME }} Profile Edit</h2>
 		<form method="POST" action="">
 			<input type="text" placeholder="First Name" name="fname" value="{{ user.fname }}" required>
@@ -9,6 +9,7 @@
 			<input type="text" placeholder="Email" name="email" value="{{ user.email }}" required>
 			<input type="text" placeholder="Phone Number" name="phone_number" value="{{ user.phone_number }}" required>
 			<input type="date" placeholder="Birthday" name="date_of_birth" value="{{ user.date_of_birth }}" required>
+		<div class="select" style="width:250px;">
 			<select name="gender">
 			  <option value="Female">Female</option>
 			  <option value="Male">Male</option>
@@ -16,6 +17,8 @@
 			  <option value="I prefer not to say">I prefer not to say</option>
 			  <option value="Other">Other</option>
 			</select>
+		</div>
+		<div class="select" style="width:250px;">
 			<select name="shirt_size">
 				<option value="Women's - S" {% if user.shirt_size == "Women's - S" %} selected="selected" {% endif %} >Women's - S</option>
 				<option value="Women's - M" {% if user.shirt_size == "Women's - M" %} selected="selected" {% endif %} >Women's - M</option>
@@ -27,8 +30,10 @@
 				<option value="Unisex - L" {% if user.shirt_size == "Unisex - L" %} selected="selected" {% endif %} >Unisex - L</option>
 				<option value="Unisex - XL" {% if user.shirt_size == "Unisex - XL" %} selected="selected" {% endif %} >Unisex - XL</option>
 			</select>
+		</div>
 			<input type="text" placeholder="School" name="school_name" value="{{ user.school_name }}" required>
 			<input type="text" placeholder="Major" name="major" value="{{ user.major }}" required>
+			<div class="select" style="width:250px;">
 			<select name="dietary_restrictions">
 				<option value="Gluten-Free" {% if user.dietary_restrictions == "Gluten-Free" %} selected="selected" {% endif %} >Gluten-Free</option>
 				<option value="Vegan" {% if user.dietary_restrictions == "Vegan" %} selected="selected" {% endif %} >Vegan</option>
@@ -36,12 +41,13 @@
 				<option value="None" {% if user.dietary_restrictions == "None" %} selected="selected" {% endif %} >None</option>
 				<option value="Other" {% if user.dietary_restrictions == "Other" %} selected="selected" {% endif %} >Other</option>
 			</select>
+			</div>
 			<input type="text" placeholder="Special Needs" value="{{ user.special_needs }}" name="special_needs">
 			<div class="medium-text">
 				<p>We need your current password if you want to make changes.</p>
 			</div>
 			<input type="password" placeholder="Old Password" name="old_password" required>
-			<input type="password" placeholder="New Password" name="new_password" required>
+			<input type="password" placeholder="New Password" name="new_password">
 			<button type="submit">Submit</button>
 		</form>
 	</div>
