--- a/pepper/templates/static_pages/index.html
+++ b/pepper/templates/static_pages/index.html
@@ -7,7 +7,7 @@
 		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="You might need to create a MyMLH Account">Sign in with MyMLH</span></button></a>
 {#		<a href="{{ url_for('register_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Regular register">Sign up with email (Test)</span></button></a>#}
 		{% if config.FALLBACK_LOCAL_REGISTER %}
-		<a href="{{ url_for('login_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="">Alternative Sign In</span></button></a>
+		<a href="{{ url_for('login_local') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons"><span class="hint--bottom" aria-label="Only use if you had trouble registering originally">Alternative Sign In</span></button></a>
 	{% endif %}
     </section>
 
