--- a/pepper/templates/users/confirm.html
+++ b/pepper/templates/users/confirm.html
@@ -129,7 +129,7 @@
 						<br>
 						<div class="control-group">
 							<h4>Interests</h4>
-							<textarea name="interests" rows="5" placeholder="iOS Development, Android Development, Web Development, Hardware, Virtual Reality, Augmented Reality, Business side of programming, Finance/tech, Medicine/tech"></textarea>
+							<textarea name="interests" rows="5" placeholder="Some examples: iOS Development, Android Development, Web Development, Hardware, Virtual Reality, Augmented Reality, Business side of programming, Finance/tech, Medicine/tech"></textarea>
 						</div>
 						<br>
 						<h4 class="two-col">What race(s) do you identify with?</h4>
