--- a/pepper/templates/corporate/dashboard.html
+++ b/pepper/templates/corporate/dashboard.html
@@ -1,3 +1,12 @@
-<h1>Hi {{ user.fname }}!</h1>
+{% extends 'layouts/base.html' %}
 
-<p>We're super excited for you to join us at {{ config.HACKATHON_NAME }}! We're proud to have a diverse array of hackers who are eager to meet you. To get started, many of them have uploaded their resume to our portal. We've built a portal for you to either choose to download all attendee resumes or you can search for attendees by applying specific filters based on school, major, or class standing.</p>
+{% block content %}
+
+<div class="center col-md-4 col-md-offset-4">
+    <h1>Hi {{ user.fname }}!</h1>
+</div>
+<div class="center col-md-12">
+    <h3>We're super excited for you to join us at {{ config.HACKATHON_NAME }}! We're proud to have a diverse array of hackers who are eager to meet you. To get started, many of them have uploaded their resume to our portal. We've built a portal for you to either choose to download all attendee resumes or you can search for attendees by applying specific filters based on school, major, or class standing.</h3>
+</div>
+
+{% endblock %}
