--- a/pepper/templates/corporate/login.html
+++ b/pepper/templates/corporate/login.html
@@ -1,21 +1,15 @@
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-Login page for corporate
-<form action="" method="post">
-    <div class="form-group">
-        <input type="email" id="email" name="email" placeholder="Email" required>
-    </div>
-    <div class="form-group">
-        <input type="password" id="password"name="password" placeholder="Password" required>
-    </div>
-    <div class="form-group">
-        <button type="submit">Sign in</button>
-    </div>
-</form>
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+	<div class="center col-md-4 col-md-offset-4">
+	    <h2>{{ config.HACKATHON_NAME }} Corporate Sign-In</h2>
+	    <form action="" method="post">
+	        <input type="email" placeholder="Email" name="email" required>
+	        <input type="password" placeholder="Password" name="password" required>
+	        <div class="form-group">
+	            <button type="submit">Sign in</button>
+	        </div>
+	    </form>
+	    <a href="{{ url_for('corp-forgot-password') }}" class=""><p>Forgot your password?</p></a>
+	</div>
+{% endblock %}
