--- a/pepper/templates/static_pages/500.html
+++ b/pepper/templates/static_pages/500.html
@@ -1,1 +1,9 @@
-Internal Server Error
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+
+<div class="center col-md-4 col-md-offset-4">
+    <h1>Internal Server Error :(</h1>
+</div>
+
+{% endblock %}
