--- a/pepper/templates/users/edit_profile.html
+++ b/pepper/templates/users/edit_profile.html
@@ -1,23 +1,27 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-	<div class="center col-md-4 col-md-offset-4">
-		<h2>{{ config.HACKATHON_NAME }} Profile Edit</h2>
-		<form method="POST" action="">
-			<input type="text" placeholder="First Name" name="fname" value="{{ user.fname }}" required>
-			<input type="text" placeholder="Last Name" name="lname" value="{{ user.lname }}" required>
-			<input type="text" placeholder="Email" name="email" value="{{ user.email }}" required>
-			<input type="text" placeholder="Phone Number" name="phone_number" value="{{ user.phone_number }}" required>
-			<input type="date" placeholder="Birthday" name="date_of_birth" value="{{ user.date_of_birth }}" required>
+<script src="{{ url_for('static', filename='js/jquery.validate.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/validate.js') }}"></script>
+
+<div class="center col-md-4 col-md-offset-4">
+	<h2>{{ config.HACKATHON_NAME }} Profile Edit</h2>
+	<form method="POST" action="" id="edit_local">
+		<input type="text" placeholder="First Name" name="fname" value="{{ user.fname }}">
+		<input type="text" placeholder="Last Name" name="lname" value="{{ user.lname }}">
+		<input type="email" placeholder="Email" name="email" value="{{ user.email }}">
+		<input type="text" placeholder="Phone Number" name="phone_number" value="{{ user.phone_number }}">
+		<input type="date" placeholder="Birthday" name="date_of_birth" value="{{ user.birthday }}">
 		<div class="select" style="width:250px;">
-			<select name="gender">
-			  <option value="Female">Female</option>
-			  <option value="Male">Male</option>
-			  <option value="Non-Binary">Non-Binary</option>
-			  <option value="I prefer not to say">I prefer not to say</option>
-			  <option value="Other">Other</option>
+			<select name="gender" id="dropdown_gender">
+				<option value="Female" {% if user.gender == "Female" %} selected="selected" {% endif %}>Female</option>
+				<option value="Male" {% if user.gender == "Male" %} selected="selected" {% endif %} >Male</option>
+				<option value="Non-Binary" {% if user.gender == "Non-Binary" %} selected="selected" {% endif %}>Non-Binary</option>
+				<option value="I prefer not to say" {% if user.gender == "I prefer not to say" %} selected="selected" {% endif %}>I prefer not to say</option>
+				<option value="Other" {% if user.gender not in ["Female", "Male", "Non-Binary", "I prefer not to say"] %} selected="selected" {% endif %}>Other</option>
 			</select>
 		</div>
+		<input type="text" placeholder="Gender" id="input_gender" name="gender_other" {% if user.gender in ["Female", "Male", "Non-Binary", "I prefer not to say"] %} style="display: none;" {% endif %} value="{{ user.gender }}"/>
 		<div class="select" style="width:250px;">
 			<select name="shirt_size">
 				<option value="Women's - S" {% if user.shirt_size == "Women's - S" %} selected="selected" {% endif %} >Women's - S</option>
@@ -31,9 +35,9 @@
 				<option value="Unisex - XL" {% if user.shirt_size == "Unisex - XL" %} selected="selected" {% endif %} >Unisex - XL</option>
 			</select>
 		</div>
-			<input type="text" placeholder="School" name="school_name" value="{{ user.school_name }}" required>
-			<input type="text" placeholder="Major" name="major" value="{{ user.major }}" required>
-			<div class="select" style="width:250px;">
+		<input type="text" placeholder="School" name="school_name" value="{{ user.school_name }}">
+		<input type="text" placeholder="Major" name="major" value="{{ user.major }}">
+		<div class="select" style="width:250px;">
 			<select name="dietary_restrictions">
 				<option value="Gluten-Free" {% if user.dietary_restrictions == "Gluten-Free" %} selected="selected" {% endif %} >Gluten-Free</option>
 				<option value="Vegan" {% if user.dietary_restrictions == "Vegan" %} selected="selected" {% endif %} >Vegan</option>
@@ -41,14 +45,14 @@
 				<option value="None" {% if user.dietary_restrictions == "None" %} selected="selected" {% endif %} >None</option>
 				<option value="Other" {% if user.dietary_restrictions == "Other" %} selected="selected" {% endif %} >Other</option>
 			</select>
-			</div>
-			<input type="text" placeholder="Special Needs" value="{{ user.special_needs }}" name="special_needs">
-			<div class="medium-text">
-				<p>We need your current password if you want to make changes.</p>
-			</div>
-			<input type="password" placeholder="Old Password" name="old_password" required>
-			<input type="password" placeholder="New Password" name="new_password">
-			<button type="submit">Submit</button>
-		</form>
-	</div>
+		</div>
+		<input type="text" placeholder="Special Needs" value="{{ user.special_needs }}" name="special_needs">
+		<div class="medium-text">
+			<p>We need your current password if you want to make changes.</p>
+		</div>
+		<input type="password" placeholder="Old Password" name="old_password">
+		<input type="password" placeholder="New Password" name="new_password">
+		<button type="submit">Submit</button>
+	</form>
+</div>
 {% endblock %}
