--- a/pepper/templates/users/forgot_password.html
+++ b/pepper/templates/users/forgot_password.html
@@ -1,4 +1,11 @@
-<form method="POST" action="">
-	<input type="email" name="email" placeholder="email">
-	<button type="submit">Submit</button>
-</form>
+{% extends 'layouts/base.html' %}
+
+{% block content %}
+<div class="center col-md-4 col-md-offset-4">
+    <h2>Forgot your password?</h2>
+    <form action="" method="post">
+        <input type="email" placeholder="Email" name="email" required>
+        <button type="submit">Submit</button>
+    </form>
+</div>
+{% endblock %}
