--- a/pepper/templates/users/sign.html
+++ b/pepper/templates/users/sign.html
@@ -29,7 +29,7 @@
 
 	</div>
 	<div class="sign top-buffer">
-		<form method="POST" action="{{ url_for('accept-invite') }}" enctype=multipart/form-data>
+		<form method="POST" action="{{ url_for('sign') }}">
 			<div class="col-md-12">
 			<h2>Medical Information</h2>
 			<div class="col-md-12">
@@ -70,13 +70,15 @@
 						<input type="text" name="medical_signature" placeholder="Full Legal Name" required>
 					</div>
 					<div class="col-md-6">
-						<input type="text" name="medical_date" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" name="medical_date" value="{{ date }}" placeholder="Date" style="display:none;">
 					</div>
 			</div>
 			</div>
 <div class="col-md-12">
 	<h2>Release and Indemnification Agreement</h2>
 	<div class="col-md-12">
+		<p>Description of Activity or Trip: Hackathon during the weekend of October 22-23, 2016 hosted by Freetail Hackers</p>
 			<p>I, {{ user.fname }} {{ user.lname }}, am eighteen years of age or older and have voluntarily applied to participate in the above Activity or Trip. I acknowledge that the nature of the Activity or Trip may expose me to hazards or risks that may result in my illness, personal injury or death and I understand and appreciate the nature of such hazards and risks.</p>
 
 <p>In consideration of my participation in the Activity or Trip, I hereby accept all risk to my health and of my injury or death that may result from such participation and I hereby release the University of Texas at Austin, its governing board, officers, employees and representatives from any and all liability to me, my personal representatives, estate, heirs, next of kin, and assigns for any and all claims and causes of action for loss of or damage to my property and for any and all illness or injury to my person, including my death, that may result from or occur during my participation in the Activity or Trip, whether caused by negligence of the University of Texas at Austin, its governing board, officers, employees, or representatives, or otherwise. I further agree to indemnify and hold harmless the University of Texas at Austin and its governing board, officers, employees, and representatives from liability for the injury or death of any person(s) and damage to property that may result from my negligent or intentional act or omission while participating in the described Activity or Trip.</p>
@@ -86,10 +88,11 @@
 			<p>I agree that my electronic signature is the legally binding equivalent to my handwritten signature. Whenever I execute an electronic signature, it has the same validity and meaning as my handwritten signature. I will not, at any time in the future, repudiate the meaning of my electronic signature or claim that my electronic signature is not legally binding.</p>
 
 		<div class="col-md-6">
-						<input type="text" name="medical_signature" placeholder="Full Legal Name" required>
+						<input type="text" name="indemnification_signature" placeholder="Full Legal Name" required>
 					</div>
 					<div class="col-md-6">
-						<input type="text" name="medical_date" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" name="indemnification_date" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" name="indemnification_date" value="{{ date }}" placeholder="Date" style="display: none;">
 					</div>
 </div>
 </div>
@@ -103,16 +106,17 @@
 				</div>
 
 		<div class="col-md-6">
-						<input type="text" name="medical_signature" placeholder="Full Legal Name" required>
+						<input type="text" name="photo_signature" placeholder="Full Legal Name" required>
 					</div>
 					<div class="col-md-6">
-						<input type="text" name="medical_date" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" name="photo_date" value="{{ date }}" placeholder="Date" disabled>
+						<input type="text" name="photo_date" value="{{ date }}" placeholder="Date" style="display: none;">
 					</div>
 			</div>
 			{% if user.school_id == 23 %}
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
-					<input type="text" name="uteid" placeholder="UT EID" required>
+					<input type="text" name="ut_eid" placeholder="UT EID" required>
 					</div>
 				</div>
 			{% endif %}
