made fifo acceptances work

--- a/pepper/templates/users/admin/accept_users.html
+++ b/pepper/templates/users/admin/accept_users.html
@@ -20,8 +20,9 @@
     <ul>
     {% for user in users %}
 		<div class="row">
-		<div class="col-md-6"
+		<div class="col-md-6">
         {{ user.fname }} {{ user.lname }}
+		</div>
 		</div>
     {% endfor %}
     </ul>
